[project]
name = "advanced-rag"
version = "0.1.0"
description = "Multimodal RAG over PDFs (OpenAI + Cohere + Weaviate, LangGraph)."
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.13.0",
    "fastapi>=0.136.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "langchain-cohere>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.8",
    "llama-cloud-services>=0.6.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.26",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.44.0",
    "weaviate-client>=4.18.0",
]

[dependency-groups]
dev = ["ruff>=0.15.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_rag"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
